Adjus send mail on membership transfer
